<resources>
    <string name="app_name">Aston_intensiv_1</string>
    <string name="player_notification">Player notification</string>
    <string name="previous_track_button">Previous track button</string>
    <string name="play_pause_button">Play/pause button</string>
    <string name="next_track_button">Next track button</string>
    <string name="music_library">Music library</string>
    <string name="select_track_to_play">Select a track to play</string>
</resources>